@startuml machine_etats
' Machine d'états du scanner — transitions valides
' Rendu : plantuml -tpdf machine_etats.puml

skinparam shadowing false
skinparam defaultFontName Latin Modern Roman
skinparam defaultFontSize 11

title Machine d'états du scanner

[*] --> IDLE

IDLE --> SCANNING : POST /scan/start
IDLE --> CALIBRATING : lancer calibration

CALIBRATING --> IDLE : terminé
CALIBRATING --> ERROR : échec

SCANNING --> PROCESSING : capture terminée
SCANNING --> ERROR : erreur matériel

PROCESSING --> EXPORTING : nuage prêt
PROCESSING --> COMPLETE : export direct
PROCESSING --> ERROR

EXPORTING --> COMPLETE : fichier écrit
EXPORTING --> ERROR

COMPLETE --> IDLE : reset()

ERROR : laser OFF demandé
ERROR --> IDLE : acquittement

@enduml
